# research-agi-agent

./: .gitignore  Makefile  README.md  alembic.ini  decision_log.md  docker-compose.yml  example_output.md  pyproject.toml  requirements.txt  sample_queries.txt  scratch.py  streamlit_app.py  summary_debug.py
.devcontainer/: config_template.yaml  devcontainer.json  env_template.env  postCreateCommand.sh  postStartCommand.sh
DeepResearchTool/: const.py  deep_research_investigator_tool.py  deep_research_tool.py  deep_research_toolkit.py  deep_research_writer_tool.py  helpers.py  topic_managers.py  topic_subagent.py
DeepResearchTool/deep_research/: summary_generator.py  topics.py
nginx/: default.conf
sample_output/: FluoridationOfWater.json  FluoridationOfWater.txt  HealthRisksOfFluoride.json  HealthRisksOfFluoride.txt  output.md  topics.json
sample_output_2/: FluoridationOfWater.json  FluorideAbsorptionAndDistribution.json  FluorideExposureSources.json  HealthRisksOfFluoride.json  WaterFluoridationAndCancerRisk.json  output.md  topics.json  user_query.txt
tests/: test_deep_research_writer_tool.py
