[tool.ruff]
# hard limit, error here
line-length = 120

[tool.black]
# soft limit, wrap just before 100 chars
line-length = 98

[tool.poetry]
name = "research-agi-agent"
version = "0.1.0"
description = ""
authors = [
    "James Hutchison <jamesghutchison@proton.me>",
    "Muhammad Ibrahim Laeeq <ibrahim.laeeq142@gmail.com>",
]
readme = "README.md"
packages = [{ include = "DeepResearchTool" }]

[tool.poetry.dependencies]
python = "^3.11"
superagi-tools = "^1.0.7"
langchain = "^0.0.268"
megamock = "^0.1.0b7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
ruff = "^0.0.284"
black = "^23.7.0"
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
